--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "lint": "eslint . --ext .js,.mjs",
     "test": "vitest run"
   },
   "devDependencies": {
+    "eslint": "^8.57.0",
     "vitest": "^1.5.0"
   },
   "dependencies": {
