--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,19 +40,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - name: Set up Bun
+        uses: oven-sh/setup-bun@v1
         with:
-          node-version: "20"
+          bun-version: "1.1.0"
 
-      - name: Install Node dependencies
-        run: npm install
+      - name: Install dependencies
+        run: bun install
 
       - name: Lint Node.js code
-        run: npm run lint
+        run: bun run lint
 
       - name: Run Node.js tests
-        run: npm test
+        run: bun run test
 
   cpp-checks:
     name: C/C++ Static Analysis
