--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.470.0",
     "@aws-sdk/lib-dynamodb": "^3.470.0"
-  }
+  },
+  "packageManager": "bun@1.1.0"
 }
 
 
