--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,5 +74,7 @@ jobs:
             --force \
             --std=c++17 \
             --suppress=missingIncludeSystem \
+            --suppress=missingInclude \
+            --suppress=unusedFunction \
             --error-exitcode=1 \
             arduino esp32-camera
